objects/DAZN_User_Device_Feed__c.object
<CustomObject>
    <fields>
        <fullName>DAZN_User_feed__c</fullName>
        <label>DAZN User Feed</label>
        <referenceTo>DAZNUserFeed__c</referenceTo>
        <relationshipLabel>DAZN User Devices Feed (DAZN User Feed)</relationshipLabel>
        <relationshipName>DAZN_User_Devices_Feed</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_of_Registration__c</fullName>
        <description>Date of registration of the user device</description>
        <label>Date of Registration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device_Id__c</fullName>
        <description>Unique ID identifying the device</description>
        <label>Device Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Registration_Date__c</fullName>
        <description>Device Registration date</description>
        <label>Device Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <description>Types of the device</description>
        <label>Device Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Console</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_address__c</fullName>
        <description>IP from where this device registered</description>
        <label>IP address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_System_Name__c</fullName>
        <description>OS name for the device</description>
        <label>Operating System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_System_Version__c</fullName>
        <description>Version of the OS on the device</description>
        <label>Operating System Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Agent__c</fullName>
        <description>User agent during device registration</description>
        <label>User Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DAZN User Device Feed</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>DAZN  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DAZN User Devices Feed</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>